apps/base/drawio/drawio-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: drawio-ingressroute
  namespace: drawio
  annotations:
    gethomepage.dev/href: "https://drawio.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "draw.io"
    gethomepage.dev/description: "Diagramming"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons@main/svg/draw-io.svg"
spec:
  entryPoints: [websecure, web]
  routes:
    - match: Host(`drawio.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: drawio
          port: 8080
          scheme: http
  tls: {}
